# PathTracer

./: .gitignore  CMakeLists.txt  main.cpp
Core/: Acceleration.cpp  Acceleration.h  CMakeLists.txt  Camera.cpp  Camera.h  Constants.h  Image.cpp  Image.h  Pch.h  Ray.cpp  Ray.h  Sampler.cpp  Sampler.h  Scene.cpp  Scene.h  Shape.cpp  Shape.h
